updated to stable version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 <div class="main">
     <h1>Task tracker</h1>
-    <div id="sync-status">Синхронизация: <span id="sync-icon">↺</span></div>
+    <div id="sync-status">
+        Синхронизация: <span id="sync-icon">↺</span>
+    </div>
     <div id="task-tracker">
         <form id = "task-form">
             <label for="task_name">Название задачи</label>
