finnaly done updating task without internet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="main">
-    <h1>Task tracker</h1>
+    <h1>Task Tracker</h1>
     <div id="sync-status">
         Синхронизация: <span id="sync-icon">↺</span>
     </div>
@@ -18,13 +18,13 @@
             <input type="text" name="task_name" id="task_name" required>
             <textarea name="task_desc" id="task_desc" placeholder="Описание задачи" required></textarea>
             <label for="task_priority">Приоритет задачи</label>
-            <select name = "priority" id="task_priority">
+            <select name = "priority" id="task_priority" required>
                 <option value="HIGH">Высокий</option>
                 <option value="MEDIUM">Средний</option>
                 <option value="LOW">Низкий</option>
             </select>
             <label for="task_status">Статус задачи</label>
-            <select name = "status" id="task_status">
+            <select name = "status" id="task_status" required>
                 <option value="PENDING">В ожидании</option>
                 <option value="IN_PROGRESS">В ходе выполнения</option>
                 <option value="COMPLETED">Выполнено</option>
@@ -33,6 +33,29 @@
 
             <button type="submit" id="submit_button">Добавить задачу</button>
         </form>
+    </div>
+    <div id="filters">
+        <label for="filter-status">Фильтр по статусу:</label>
+        <select id="filter-status">
+            <option value="all">Все</option>
+            <option value="PENDING">В ожидании</option>
+            <option value="IN_PROGRESS">В ходе выполнения</option>
+            <option value="COMPLETED">Выполнено</option>
+        </select>
+
+        <label for="filter-priority">Фильтр по приоритету:</label>
+        <select id="filter-priority">
+            <option value="all">Все</option>
+            <option value="HIGH">Высокий</option>
+            <option value="MEDIUM">Средний</option>
+            <option value="LOW">Низкий</option>
+        </select>
+
+        <label for="filter-dueDate">Фильтр по сроку:</label>
+        <input type="date" id="filter-dueDate">
+
+        <button id="apply-filters">Применить фильтры</button>
+        <button id="reset-filters">Сбросить фильтры</button>
     </div>
     <div id="error-message"></div>
     <div id="task-list">
